tests/invalid/runtime/string_substring_oob.pts
import Io;

function main() : void {
    string s = "abc";
    string t = s.substring(2, 2);
    Io.printLine(t);
}
